# einsum_ir

./: AGENTS.md  LICENSE  README.rst  README.txt  SConstruct
.github/workflows/: fedora.yml  macos.yml  main.yml  pypi-nightly.yml  pypi.yml  ubuntu.yml
python/: CMakeLists.txt  LICENSE  README.rst  pyproject.toml  pytest.ini  version_cli.py
python/src/: Model.cpp  Model.h  TensorOperation.cpp  TensorOperation.h  bindings.cpp  types.h
python/src/etops/: __init__.py  config.py  types.py
python/src/etops/backends/: __init__.py  base.py  cutile.py  tileir.py  tpp.py
python/src/etops/backends/_cutile/: cache.py  config_helper.py  config_parser.py  jit_compiler.py  optimizer.py  utils.py
python/src/etops/backends/_tileir/: compiler.py  config_analysis.py  config_helper.py  ir_builder.py  optimizer.py  transforms.py
python/tests/: test_api.py  test_backends.py  test_config.py  test_cutile_jit.py  test_tileir.py  test_types.py
samples/binary/: generate.py  run_bench.sh  run_iree.py
samples/einsum/: README.rst  benchmark_convert.py  onednn.txt  str_nw_mera_open_26.txt  synthetic.txt
samples/einsum_benchmark/: README.rst  lm_batch_likelihood_sentence_5_16d_batch128.cfg  lm_first_last_brackets_4_16d.cfg  lm_first_last_brackets_4_16d_et.cfg  lm_first_last_brackets_4_16d_tvm.py  onednn.txt  str_nw_mera_open_26.cfg  str_nw_mera_open_26_et.cfg  str_nw_mera_open_26_tvm.py  synthetic_et.cfg  synthetic_tvm.py  tvm_synthetic.py
samples/mlp/: mlp_fashion_mnist.py  onednn_gemms.txt
samples/model/: matmul.py
samples/profile/: profile_matmul.py
samples/resnet/: onednn_conv2d.txt  resnet_18.py
samples/tccg/: blocking.py  onednn_adjusted.txt  onednn_batch.txt  run_bench.sh  run_blocking.sh  settings_adjusted.cfg  settings_batch.txt  settings_blocked.txt  settings_blocked_reordered.cfg  settings_default.txt  settings_full.txt  tvm_blocked_reordered.py  tvm_default.py
samples/tensor_decomp/: README.rst  fctn.cfg  fctn.py  fctn_et.cfg  fctn_tvm.py  getd.cfg  getd.py  getd_et.cfg  getd_tvm.py  tt.cfg  tt.py  tt_et.cfg  tt_tvm.py  tw.cfg  tw.py  tw_et.cfg  tw_tvm.py
samples/tensor_layers/: README.rst  fc.cfg  fc.py  trn.cfg  trn.py  trn_et.cfg  trn_tvm.py
samples/tools/: bench_einsum_ir.sh  bench_opt_einsum.sh  bench_tvm.sh  main_parser.py  opt_einsum_run.py  parser_backend.py  tvm_einsum_tree_parser.py  tvm_from_tree.py  tvm_helper.py
src/: SConscript  bench_binary.cpp  bench_expression.cpp  bench_mlp.cpp  bench_resnet.cpp  bench_tree.cpp  bench_unary.cpp  constants.h  tests.cpp
src/backend/: BinaryContraction.cpp  BinaryContraction.h  BinaryContraction.test.cpp  BinaryContractionBlas.cpp  BinaryContractionBlas.h  BinaryContractionBlas.test.torch.cpp  BinaryContractionFactory.cpp  BinaryContractionFactory.h  BinaryContractionScalar.cpp  BinaryContractionScalar.h  BinaryContractionScalar.test.torch.cpp  BinaryContractionSfcTpp.cpp  BinaryContractionSfcTpp.h  BinaryContractionTblis.cpp  BinaryContractionTblis.h  BinaryContractionTblis.test.torch.cpp  BinaryContractionTpp.cpp  BinaryContractionTpp.h  BinaryContractionTpp.test.cpp  BinaryContractionTpp.test.torch.cpp  BinaryPrimitives.cpp  BinaryPrimitives.h  BinaryPrimitives.test.cpp  ContractionBackend.cpp  ContractionBackend.h  ContractionBackendTpp.cpp  ContractionBackendTpp.h  ContractionBackendTpp.test.torch.cpp  ContractionLoops.cpp  ContractionLoops.h  ContractionLoopsBlas.cpp  ContractionLoopsBlas.h  ContractionLoopsBlas.test.torch.cpp  ContractionLoopsSfc.cpp  ContractionLoopsSfc.h  ContractionLoopsSimple.cpp  ContractionLoopsSimple.h  ContractionLoopsSimple.test.cpp  ContractionLoopsTpp.cpp  ContractionLoopsTpp.h  (+33 more)
src/basic/: CMakeLists.txt  SConscript  constants.h  threading.h
src/basic/binary/: CMakeLists.txt  ContractionBackend.cpp  ContractionBackend.h  ContractionBackendBlas.cpp  ContractionBackendBlas.h  ContractionBackendBlas.test.torch.cpp  ContractionBackendScalar.cpp  ContractionBackendScalar.h  ContractionBackendScalar.test.torch.cpp  ContractionBackendTpp.cpp  ContractionBackendTpp.h  ContractionBackendTpp.test.torch.cpp  ContractionMemoryManager.cpp  ContractionMemoryManager.h  ContractionOptimizer.cpp  ContractionOptimizer.h  ContractionOptimizer.test.cpp  IterationSpace.cpp  IterationSpace.h  IterationSpace.test.cpp
src/basic/unary/: UnaryBackend.cpp  UnaryBackend.h  UnaryBackendScalar.cpp  UnaryBackendScalar.h  UnaryBackendScalar.test.torch.cpp  UnaryBackendTpp.cpp  UnaryBackendTpp.h  UnaryBackendTpp.test.torch.cpp  UnaryOptimizer.cpp  UnaryOptimizer.h
src/binary/: CMakeLists.txt  ContractionBackend.cpp  ContractionBackend.h  ContractionBackendBlas.cpp  ContractionBackendBlas.h  ContractionBackendBlas.test.torch.cpp  ContractionBackendScalar.cpp  ContractionBackendScalar.test.torch.cpp  ContractionBackendTpp.cpp  ContractionBackendTpp.h  ContractionBackendTpp.test.torch.cpp  ContractionOptimizer.cpp  ContractionOptimizer.h  ContractionOptimizer.test.cpp  IterationSpace.cpp  IterationSpace.h  IterationSpace.test.cpp  SConscript  constants.h
src/etops/: SConscript  constants.h
src/frontend/: EinsumExpression.cpp  EinsumExpression.h  EinsumExpression.test.cpp  EinsumExpression.test.torch.cpp  EinsumExpression.torch.cpp  EinsumExpressionAscii.cpp  EinsumExpressionAscii.h  EinsumExpressionAscii.test.cpp  EinsumTree.cpp  EinsumTree.h  EinsumTree.test.torch.cpp  EinsumTreeAscii.cpp  EinsumTreeAscii.h  ResidualBlock.cpp  ResidualBlock.h  ResidualBlock.test.torch.cpp  ResidualBlockDownSample.cpp  ResidualBlockDownSample.h  ResidualBlockDownSample.test.torch.cpp
src/model/: CMakeLists.txt  README.md
src/model/src/: bench_model.cpp
src/model/src/a76/: bench_a76.cpp  bench_a76.h  model_a76.cpp  model_a76.h  model_a76.test.cpp
src/model/src/common/: common.cpp  common.h  common.test.cpp  interpolation.cpp  interpolation.h
src/model/src/generic/: model_generic.cpp  model_generic.h
src/model/src/m4/: bench_m4.cpp  bench_m4.h  model_m4.cpp  model_m4.h  model_m4.test.cpp
src/model/src/zen5/: bench_zen5.cpp  bench_zen5.h  model_zen5.cpp  model_zen5.h  model_zen5.test.cpp
(+61 files in other folders)
